--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div id="app"></div>
     <script src="bundle.js"></script>
+    <paper-button>Paper Button</paper-button>
 </body>
 
 </html>
